--- a/Camera2/Info.plist
+++ b/Camera2/Info.plist
@@ -20,8 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCalendarsUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 	<string>カメラにアクセスします</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>フォトライブラリーに保存します</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
